--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -6,8 +6,9 @@
 name: Create and publish a Docker image
 
 on:
+  workflow_dispatch:
   push:
-    branches: ['release']
+    branches: ['latest', 'release']
 
 env:
   REGISTRY: ghcr.io
